# TFG_AI

./: .gitignore  README.md  pyproject.toml  run_notebook.sh
Fase_2/: 00_Composicion_dataset.ipynb  01_EDA_y_Preparación_de_Datos.ipynb  02_1_Modelado_Seleccion_de_Caracteristicas.ipynb  02_2_Modelado_Entrenamiento_de_modelos.ipynb  02_3_Modelado_Análisis_Postentrenamiento.ipynb
Fase_2/.ipynb_checkpoints/: 00_Composicion_dataset-checkpoint.ipynb  02_1_Modelado_Seleccion_de_Caracteristicas-checkpoint.ipynb  02_2_Modelado_Entrenamiento_de_modelos-checkpoint.ipynb  02_3_Modelado_Análisis_Postentrenamiento-checkpoint.ipynb  02_Modelado-checkpoint.ipynb
Fase_2/data/: calibration_dataset.csv  test_dataset.csv
Fase_2/data/best_models/: best_catboost_model.joblib  best_logreg_model.joblib  best_xgboost_model.joblib
Fase_2/data/final/: cal_reduced_feat.csv  full_top_significance_reduced_feat.csv  scaled_cal_reduced_feat.csv  scaled_test_reduced_feat.csv  scaled_train_reduced_feat.csv  test_reduced_feat.csv  train_reduced_feat.csv
Fase_2/data/optuna_studies/: studies.db
